--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="js\styles.css" >
   <title>DOM</title>
 </head>
-<body>
-  <h1>Lista de Elementos</h1>
+<body class="cuerpo">
+  <div class="div">
+    <h1 class="titulo">Lista de Elementos</h1>
+  </div >
     <ul id="lista"></ul>
     <button id="agregar">Agregar Elemento</button>
 
